# postgres_app

./: README.md  docker-compose.yaml  paretoplot.html  pyproject.toml  temp-plot.html
assets/: .~lock.App_Design.odg#  App_Design.odg  architecture_dash_app.xcf  design_of_dbs.xcf
construct_tables/: construction.py  construction.sql
dashapp/: dockerfile  index.py  pyproject.toml
dashapp/app/: postgres_app.py
dashapp/app/assets/: 01sidebar.css  02cards.css  03hexa.css
dashapp/app/pages/: analysis.py  booking.py  construct.py  costcenter.py  entity.py  home.py  increase.py  planning.py  project_controlling.py  project_schedule.py  projects.py  search.py  team.py
dashapp/app/tests/: test_dummy_all_true.py
dashapp/app/utilities/: app_utilities.py  cards.py  hex_cards.py  plot.py  sidebar_utils.py
experimental/: booking_try.py  budget.py  construction.py  controlling_try.py  datetime.py  datum.py  exp1.py  gant_project_one_person.py  planning_.py  postgres_func_persons.py  postgres_functions.py  postgres_functions_entity.py  project_funct.py  scheduling.py  scheduling_call_data.py  search.py
